# redmi-1o

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
docs/: README.md
lib/sh1106/: .cargo_vcs_info.json  Cargo.toml
lib/sh1106/src/: command.rs  displaysize.rs  properties.rs
lib/sh1106/src/interface/: i2c.rs
lib/sh1106/src/mode/: graphics.rs
lib/ssd1306-i2c/: .cargo_vcs_info.json  Cargo.toml
lib/ssd1306-i2c/examples/: simple-text.rs
lib/ssd1306-i2c/src/: builder.rs  command.rs  displaysize.rs  lib.rs  prelude.rs  properties.rs
lib/ssd1306-i2c/src/interface/: i2c.rs  mod.rs
lib/ssd1306-i2c/src/mode/: displaymode.rs  graphics.rs  raw.rs
scripts/: flash.sh
src/: bit_image.rs  buzzer.rs  display.rs  display_sh1106.rs  main.rs  qr_generator.rs  wifi.rs
