[package]
name = "zabka-esp"
version = "0.1.0"
authors = ["CritBit <Jakub.Sadowski1@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "zabka-esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
hmac = "0.12.1"
sha1 = "0.10.6"
rand = "0.8.5"
heapless = "0.8.0"

ssd1306-i2c = { path = "./lib/ssd1306-i2c" }
qrcode = { path = "./lib/qrcode"}

embedded-graphics = "0.8.1"  # latest is 0.8.1
# ssd1306-i2c = { version = "0.1"}
esp-idf-hal = "0.45.2"
anyhow = "1.0"

[build-dependencies]
embuild = "0.33"
